[tool.poetry]
name = "line-sticker-dl"
version = "1.0.1"
description = "line sticker downloader"
readme = 'README.md'
authors = ["granitosaurus <tinarg@protonmail.com>"]
keywords=['scraper', 'web-crawling', 'cli', 'sticker']
license = "GPL-3.0-or-later"
homepage = "https://github.com/granitosaurus/line-sticker-dl"
repository = "https://github.com/granitosaurus/line-sticker-dl"
packages = [
    { include = "linestickerdl" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"
parsel = "^1.5.2"
questionary = "^1.5.1"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
line-sticker-dl = 'linestickerdl.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

